task2/content-works.css
/* content:works.activated */
.content.works.activated {
    display: flex;
    flex-direction: column;
}
/* content:works > banner */
.content.works>.banner {
    width: 100%;
    padding: 80px 0;
    display: flex;
    gap: 24px;
    flex-direction: column;
    align-items: center;
    background-color: #FAFAFA;
}
.content.works>.banner>.slogan {
    width: 670px;
    /* height: 192px; */
    display: flex;
    flex-direction: column;
    align-items: center;
}
.content.works>.banner>.slogan>.text {
    display: flex;
    gap: 16px;
    flex-direction: column;
    align-items: center;
}
.content.works>.banner>.slogan>.text>h4 {
    font-size: 24px;
    line-height: 28.8px;
    position: relative;
}
.content.works>.banner>.slogan>.text>h4>p {
    position: relative;
    z-index: 1;
}
.content.works>.banner>.slogan>.text>h4>img.hl {
    position: absolute;
    right: -0.5em;
    bottom: 0px;
}
.content.works>.banner>.slogan>.quote.left {
    margin-right: auto;
    margin-bottom: -13px;
}
.content.works>.banner>.slogan>.quote.right {
    margin-left: auto;
    margin-top: -13px;
}
.content.works>.banner>.cards {
    width: 636px;
    display: flex;
    gap: 40px;
    justify-content: center;
}
.content.works>.banner>.cards>.card {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 8px;
}
.content.works>.banner>.cards>.card>.title {
    display: flex;
    flex-direction: column;
    gap: 4px;
    align-items: center;
}
.content.works>.banner>.cards>.card>.title>h6 {
    line-height: 24px;
    color: #5B5B5B;
}
.content.works>.banner>.cards>.card>.title>.line {
    width: 24px;
    border-bottom: 2px solid #C1C1C1;
}
.content.works>.banner>.cards>.card>p {
    line-height: 24px;
    text-align: center;
    color: #3B3B3B;
}
/* content:works > main */
.content.works>.main {
    padding: 120px 0;
    display: flex;
    flex-direction: column;
    gap: 72px;
    align-items: center;
}
.content.works>.main>.cards {
    /* max-width: 1296px; */
    display: flex;
    gap: 24px;
    flex-wrap: wrap;
    justify-content: center;
}
.content.works>.main>.cards>.card {
    display: flex;
    gap: 16px;
    flex-direction: column;
}
.content.works>.main>.cards>.card>img {
    border-radius: 8px;
    border: 1px solid #F1F1F1;
    box-sizing: border-box;
}
.content.works>.main>.cards>.card>.text {
    border-bottom: 1px;
    padding: 0 16px;
    display: flex;
    flex-direction: column;
    gap: 24px;
}
.content.works>.main>.cards>.card>.text>.intro {
    display: flex;
    flex-direction: column;
    gap: 8px;
}
.content.works>.main>.cards>.card>.text>.intro>h2 {
    font-weight: 700;
    font-size: 28px;
    line-height: 33.6px;
    color: #3B3B3B;
}
.content.works>.main>.cards>.card>.text>.intro>p {
    line-height: 24px;
    color: #919191;
}
.content.works>.main>.cards>.card>.text>.tags {
    display: flex;
    gap: 16px;
}
.content.works>.main>.cards>.card>.text>.tags>.tag {
    border-radius: 16px;
    padding: 4px 12px;
    background-color: #F1F1F1;
    line-height: 24px;
    color: #3B3B3B;
}
.content.works>.main>.pages {
    display: flex;
    gap: 16px;
    justify-content: center;
}
.content.works>.main>.pages>.page {
    min-width: 40px;
    border-radius: 4px;
    padding: 2px 13px;
    box-sizing: border-box;
}
.content.works>.main>.pages>.page:hover {
    background-color: #DDD;
}
.content.works>.main>.pages>.page>a {
    text-decoration: none;
    font-size: 24px;
    line-height: 36px;
    text-align: center;
    color: #3B3B3B;
}
.content.works>.main>.pages>.page.active {
    background-color: #1E1E1E;
}
.content.works>.main>.pages>.page.active>a {
    color: #FFFFFF;
}

